--- a/check/test.html
+++ b/check/test.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1 style="color:red;">Google</h1>
-<h2>gut</h2>
+<h2>git1</h2>
 <H3> smaller</h3>
 <p>Paragraphs are the building blocks of papers. 
 Many students define paragraphs in terms of length:
