--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1 style="color:red;">Google</h1>
-<h2>gutcxvcvf</h2>
+<h2>git</h2>
 <H3> smaller</h3>
 <p>Paragraphs are the building blocks of papers. 
 Many students define paragraphs in terms of length:
