--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <h1 style="color:red;">Google</h1>
 <h2>git</h2>
+<h3>great doing practice</h3>
 <H3> smaller</h3>
 <p>Paragraphs are the building blocks of papers. 
 Many students define paragraphs in terms of length:
